templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080         # Exposing backend service on port 8081
      targetPort: 8080     # Backend listens on port 8081
  selector:
    app: backend

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 8081         # Exposing frontend service on port 8080
      targetPort: 8081     # React frontend listens on port 8080
  selector:
    app: frontend

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306          # Exposing MySQL service on port 3306 (standard MySQL port)
      targetPort: 3306     # MySQL listens on port 3306
  selector:
    app: mysql
